# modelReviewTool

./: .gitmodules  CMakeLists.txt  README.md  logo.h  main.cpp  main.qml  qml.qrc
src/: cubes.h  qbgfx.cpp  qbgfx.h
src/3dparts/: CMakeLists.txt  camera.cpp  camera.h  model.cpp  model.h  transform.cpp  transform.h  types.h
src/qquickbgfxitem/: qquickbgfxitem.cpp  qquickbgfxitem.h
src/qsgbgfxnode/: qsgbgfxnode.cpp
